make ready for KGP
