# locations/models.py
@@ -25,8 +25,6 @@ class Location(models.Model):
     parent_relation = models.CharField(max_length=50, blank=True, null=True)
     group_id = models.IntegerField(blank=True, null=True)
 
-    pixel_x = models.IntegerField(blank=True, null=True)
-    pixel_y = models.IntegerField(blank=True, null=True)
     lat = models.DecimalField(max_digits=9, decimal_places=6, blank=True, null=True)
     lng = models.DecimalField(max_digits=9, decimal_places=6, blank=True, null=True)
     reusable = models.BooleanField(default=False)
